<resources>
    <string name="app_name">Library Management</string>
    <string name="book_name">Tên sách</string>
    <string name="id_book">Mã sách</string>
    <string name="status">Tình trạng</string>
    <string name="type_book">Thể loại</string>
    <string name="author">Tác giả</string>
    <string name="publisher">Nhà xuất bản</string>
    <string name="publishing_year">Năm xuất bản</string>
    <string name="user_name">Tên người dùng</string>
    <string name="id_user">Mã độc giả</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="search_book">Tra cứu sách</string>
    <string name="info_user">Thông tin cá nhân</string>
    <string name="borrowed_book">Sách đã mượn</string>
    <string name="log_out">Đăng xuất</string>
    <string name="book_manager">Quản lý sách</string>
    <string name="reader_manager">Quản lý độc giả</string>
    <string name="borrowed_bill">Phiếu trả mượn sách</string>
    <string name="statistic">Thống kê</string>
    <string name="librarian_manager">Quản lý thủ thư</string>
    <string name="rule">Thay đổi quy định</string>
</resources>