<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InfomationBookActivity"
    android:background="@color/background">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frame_info_user">
        <include
            android:id="@+id/toolbarInfoBook"
            layout="@layout/toolbar"/>
    </FrameLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_info_user"
        android:layout_marginTop="17dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="76.6dp"
                    android:layout_height="108dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/avatarBook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/image_book" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22.4dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/nameUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textSize="18sp"
                        android:textColor="#000" />
                    <LinearLayout
                        android:layout_marginTop="9dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/id_user"
                                android:textColor="#000"
                                android:layout_marginBottom="10dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/birthday"
                                android:textColor="#000"
                                android:layout_marginBottom="10dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender"
                                android:textColor="#000"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginStart="15dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/idUser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/id_user"
                                android:textColor="#000"
                                android:layout_marginBottom="10dp"/>
                            <TextView
                                android:id="@+id/birthday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/birthday"
                                android:textColor="#000"
                                android:layout_marginBottom="10dp"/>
                            <TextView
                                android:id="@+id/gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender"
                                android:textColor="#000"/>
                        </LinearLayout>
                    </LinearLayout>




                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="26dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="#000"
                        android:layout_marginBottom="21dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="#000" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="#000"
                        android:layout_marginBottom="21dp"/>
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="#000" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>